@@ -58,6 +58,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7349: Make methods of file objects in the io module accept None as an
+  argument where file-like objects (ie StringIO and BytesIO) accept them to mean
+  the same as passing no argument.
+
 - Issue #5949: added check for correct lineends in input from IMAP server
   in imaplib.
 
